# woodburn

./: .dockerignore  .env.example  .pre-commit-config.yaml  404.html  CNAME  Dockerfile  Jenkinsfile  LICENSE  README.md  cleanup.bat  cleanup.ps1  index.html  main.py  nginx.conf  pyproject.toml  requirements.txt  server.py  services.json
.gitea/workflows/: build.yml  check.yml  push.yml
.well-known/: nostr.json  webfinger
.well-known/wallets/: BTC  CRO  HNS  MATIC  SOL  XMR
assets/css/: 404.css  404.min.css  index.css  index.min.css
assets/js/: 404.min.js  agency.js  hacker.js  status.js
templates/: 404.html  500.html  index.html
templates/assets/css/: 404.css  500.css  index.css
templates/assets/js/: index.js
tools/: adventure.py  cloud.py  links.py
